# parl-node

./: API.md  Cargo.toml  README.md  build_all.sh
parl_common/: Cargo.toml  build.rs
parl_common/src/: config.rs  difficulty.rs  time.rs  utils.rs
parl_common/src/api/: daemon.rs  mod.rs  wallet.rs
parl_common/src/block/: miner.rs
parl_common/src/crypto/: proofs.rs
parl_common/src/transaction/: builder.rs  extra_data.rs  mod.rs  tests.rs  verify.rs
parl_daemon/: Cargo.toml
parl_daemon/src/: config.rs  main.rs
parl_daemon/src/core/: blockchain.rs  blockdag.rs  difficulty.rs  error.rs  genesis_generator.rs  mempool.rs  merkle.rs  nonce_checker.rs  simulator.rs  tx_selector.rs
parl_daemon/src/p2p/: chain_validator.rs  connection.rs  error.rs  mod.rs  peer.rs  peer_list.rs  tracker.rs
parl_daemon/src/rpc/: getwork_server.rs  mod.rs  rpc.rs
parl_miner/: Cargo.toml
parl_miner/src/: config.rs  main.rs
parl_wallet/: Cargo.toml
parl_wallet/src/: cipher.rs  config.rs  daemon_api.rs  entry.rs  error.rs  main.rs  network_handler.rs  storage.rs  transaction_builder.rs  wallet.rs
parl_wallet/src/api/: mod.rs  rpc.rs  rpc_server.rs  xswd.rs
zytex_common/: Cargo.toml  build.rs
zytex_common/src/: config.rs  difficulty.rs  time.rs  utils.rs
zytex_daemon/: Cargo.toml
zytex_daemon/src/: config.rs  main.rs
zytex_miner/: Cargo.toml
zytex_miner/src/: main.rs
zytex_wallet/: Cargo.toml
zytex_wallet/src/: cipher.rs  daemon_api.rs  entry.rs  error.rs  main.rs  network_handler.rs  storage.rs  transaction_builder.rs  wallet.rs
(+87 files in other folders)
