[workspace]
resolver = "2"

members = [
    "parl_common",
    "parl_wallet",
    "parl_miner",
    "parl_daemon"
]

# cargo run --profile release-with-lto
[profile.release-with-lto]
inherits = "release"
opt-level = 3
debug-assertions = false
overflow-checks = false
lto = true
bincode = "2.0.0-rc.3"
